# j

./: .junosw_build_config  ExternalLibs.py  MaskManagers.rst  NNVTMCPPMTManager.rst  PMTCompare.py  PMTEfficiencyCheck.py  PMTEfficiencyCheck.sh  PMTEfficiencyCheck_.py  PMTParamSvc.py  PMTSimParamSvc.py  PMTSimParamSvc.rst  acat.rst  bash_junoenv_libs_errors.rst  commits.txt  cx.sh  gdmlchk.py  gpujob.sh  j.bash  jok.bash  juno-offline-reinstall-july6-2021.rst  juno-offline-update-july25-2022.rst  juno-opticks-code-orientation.rst  juno-opticks-validation.rst  jx.bash  lxslc7.bash  month.sh  offline_swallows_errors_yielding_misleading_EndOfRun_backtrace.rst  ok.bash  okjob.sh  okjobdev.sh  precision-cleanup.rst  progress.rst  progress.txt  qty.py  qty.sh  sticks.rst  surface_convert_from_gdml_export_diff.rst  ungrab.sh  uproot_test.py
AcrylicRepair/: diwash.rst  diwash0.txt  diwash2.rst
Calib_GuideTube_Construction/: Calib_GuideTube_Construction.rst  gt.py
FastenerAcrylicConstruction/: FastenerAcrylicConstruction.rst
Geant4Standalone/: Geant4Standalone.cc  build.sh  cf.sh
Layr/: IPMTAccessor.h  JPMT.h  JPMTProp.h  JPMTPropTest.cc  JPMTPropTest.py  JPMTPropTest.sh  JPMTTest.cc  JPMTTest.py  JPMTTest.sh  Layr.h  Layr.rst  LayrMin.cc  LayrMinimal.cc  LayrMinimal.sh  LayrTest.cc  LayrTest.cu  LayrTest.h  LayrTest.py  LayrTest.sh  PMTAccessor.h  PMTProp.h  PMTPropTest.cc  PMTPropTest.py  PMTPropTest.sh  PrepStack.h  PrepStackTest.py  PrepStackTest.sh  StackSpecTest.cc  StackSpecTest.sh  index.rst  planning_CustomG4OpBoundaryProcess_development.rst
MR405_POM_veto_PMT/: index.rst
Misc/: LSExpDetectorConstructionMaterial.icc  index.rst
PMT2/: c4.rst  index.rst  yuhan.rst  yuhan0.txt  yuhan2.txt  yuhan3.txt  yuhan3rep.txt
PMTAngular/: PMTAngular.cc  PMTAngular.py  PMTAngular.sh  grab.sh
PMTFastSim/: CMakeLists.txt  CommonPMTManager.h  DetectorConstruction.cc  DetectorConstruction.hh  DetectorConstructionTest.sh  F4.hh  HamamatsuR12860PMTManager.cc  HamamatsuR12860PMTManager.hh  Hamamatsu_R12860_PMTSolid.hh  IGeomManager.h  J_PMTFASTSIM_LOG.cc  J_PMTFASTSIM_LOG.hh  LSExpDetectorConstructionMaterial.icc  Layer.cc  Layer.h  LayerTest.cc  Layr.h  LayrTest.cc  LayrTest.cu  LayrTest.h  LayrTest.py  LayrTest.sh  Material.cc  Material.h  MaterialSvc.cc  MaterialSvc.hh  Matrix.cc  Matrix.h  MultiFilmModel.cc  MultiFilmModel.h  MultiFilmModelTest.cc  N4Volume.hh  OpticalSystem.cc  OpticalSystem.h  OpticalSystemTest.cc  PMTFASTSIM_API_EXPORT.hh  PMTFastSim.cc  PMTFastSim.hh  PMTFastSim.rst  TComplex.h  (+19 more)
PMTFastSim/tests/: CMakeLists.txt  DetectorConstructionTest.cc  MaterialTest.cc  MatrixTest.cc  PMTAccessorTest.cc  PMTAccessorTest.py  PMTAccessorTest.sh  buildtest.sh  junoPMTOpticalModelTest.cc  junoPMTOpticalModelTest.sh
PMTSim/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  Dimensions.hh  HamamatsuMaskManager.cc  HamamatsuMaskManager.hh  HamamatsuR12860PMTManager.cc  HamamatsuR12860PMTManager.hh  Hamamatsu_R12860_PMTSolid.cc  Hamamatsu_R12860_PMTSolid.hh  IGeomManager.h  IGeomStandalone.cc  IGeomStandalone.h  IMCParamsSvc.hh  J_PMTSIM_LOG.cc  J_PMTSIM_LOG.hh  LSExpDetectorConstructionMaterial.icc  LSExpDetectorConstruction_setupCD_Sticks.rst  LowerChimney.cc  LowerChimney.hh  LowerChimneyMaker.cc  LowerChimneyMaker.hh  Material.cc  Material.hh  MaterialSvc.cc  MaterialSvc.hh  NNVTMCPPMTManager.cc  NNVTMCPPMTManager.hh  NNVTMaskManager.cc  NNVTMaskManager.hh  NNVT_MCPPMT_PMTSolid.cc  NNVT_MCPPMT_PMTSolid.hh  OldZSolid.cc  OldZSolid.hh  P4Volume.cc  P4Volume.hh  PMTSIM_API_EXPORT.hh  PMTSim.cc  PMTSim.hh  PMTSim.rst  (+26 more)
PMTSim/aside/: HamamatsuMaskManager.cc  NNVTMCPPMTManager.hh  NNVT_MCPPMT_PMTSolid.cc  NNVT_MCPPMT_PMTSolid.hh
PMTSim/tests/: CMakeLists.txt  DetectorConstructionTest.cc  G4UnionSolidOffsetsTest.cc  G4UnionSolidOffsetsTest.sh  GetLVTest.cc  GetLVTest.sh  GetPVMultiTest.sh  GetPVTest.cc  GetPVTest.sh  GetSolidTest.cc  GetSolidTest.sh  GetSolid_Test.cc  GetValuesTest.cc  HamamatsuR12860PMTManagerTest.cc  MaterialSvcTest.cc  MaterialSvcTest.sh  MaterialTest.cc  MaterialTest.sh  PMTSimTest.cc  PMTSim_GetSolid_test.cc  PMTSim_GetSolid_test.sh  PMTSolidTest.cc  X4SolidTreeTest.cc  ZSolidTest.cc  utilsTest.cc  utilsTest.sh
PMTSimParamData/: NPFoldTest.cc  NPFoldTest.sh  PMTAccessorTest.cc  PMTAccessorTest.py  PMTAccessorTest.sh  PMTSimParamDataTest.cc  PMTSimParamDataTest.sh
PMTSimParamSvc/: map_convert_test.cc  map_convert_test.py  map_convert_test.sh
PMTSimParamSvcTest/: CMakeLists.txt  PMTSimParamSvcTest.cc  PMTSimParamSvcTest.py  PMTSimParamSvcTest.sh  go.sh  results.rst
PosFile/: HexagonPosBall.cc  HexagonPosBall.hh  HexagonPosBallTest.cc  HexagonPosBallTest.py  HexagonPosBallTest.sh  Radius.hh  RadiusTest.cc  RadiusTest.py  RadiusTest.sh  Sticks.hh  SticksTest.cc  SticksTest.sh  Table.hh  pos.py
SProfileDemo/: index.rst  junoSD_PMT_v2.cc  junoSD_PMT_v2.hh  junoSD_PMT_v2_Opticks.cc
WaterPoolConstruction/: WaterPoolConstruction.rst  jilei.txt  jilei2.txt
acrylic_surface/: index.rst
anaconda_test/: anaconda_test.bash
attic/: LSExpDetectorConstruction_Opticks_old.cc
bash/: b.sh
blyth-88-merge/: ScanPE.C  ScanPE.sh  changes.txt  totalPE.rst  totalTime.rst
branches/: PMTScan_test.py  PMTScan_test.sh  blyth-66-low-dependency-PMT-data-access.rst
dirac/: dirac.rst
docs/: offline_opticks_cmake_usage.rst
energy_resolution_paper/: build.sh  energy_resolution_paper.rst
gitlab-ci/: initialize_geom.rst  long.txt  mockbuild.sh
gpu/: data_center_rt.rst  procurement.rst
hybrid_production/: cms_nvidia_dynamo.rst  index.rst
issues/: 02mar2022_name_change.rst  3inch_PMT_geometry.rst  3inch_PMT_geometry_after_virtual_delta.rst  Custom4_dev_setup_on_workstation.rst  EFFICIENCY.rst  EndOfRunAction_getting_null_G4Run.rst  FastenerAcrylicConstruction.rst  Fastener_asis_sibling_soup.rst  G4CXAppTest_comparison.rst  G4CXAppTest_shakedown.rst  G4CXOpticks_setGeometry_Test_unexpected_GGeo_writing.rst  G4CXTest_GEOM_disrepant_Chimney.rst  G4CXTest_comparison.rst  G4CXTest_shakedown.rst  G4Cerenkov_modified.rst  G4SystemOfUnits.rst  (+137 more)
(+69 files in other folders)
